Bug 1706939 - Make the SVG attribute code a bit more generic. r=longsonr

This could still be massively improved... Why the heck are we doing so
many virtual calls to parse an attribute? :(

Differential Revision: https://phabricator.services.mozilla.com/D113205