dom/svg/DOMSVGStringList.cpp
@@ -201,7 +201,7 @@ SVGStringList& DOMSVGStringList::InternalList() const {
     nsCOMPtr<dom::SVGTests> tests = do_QueryObject(mElement);
     return tests->mStringListAttributes[mAttrEnum];
   }
-  return mElement->GetStringListInfo().mStringLists[mAttrEnum];
+  return mElement->GetStringListInfo().mValues[mAttrEnum];
 }
 
 }  // namespace dom
